# witty

./: .gitignore  Cargo.toml  README.md  justfile
apple/: Cargo.toml
apple/src/: lib.rs
banana/: Cargo.toml
banana/src/: lib.rs
cantaloupe/: Cargo.toml
jackfruit/: README.md  app.js  componentize.js  package-lock.json  package.json
src/: main.rs
wit/: component.wit
